# toebeans

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
.devcontainer/: .env
migrations/2024-09-30-221140_create_animals/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/models/: animal.rs  mod.rs
