[package]
name = "toebeans"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
#serde = "1.0.214"
